toolkit/themes/windows/global/xulscrollbars.css
/
*
This
Source
Code
Form
is
subject
to
the
terms
of
the
Mozilla
Public
*
License
v
.
2
.
0
.
If
a
copy
of
the
MPL
was
not
distributed
with
this
*
file
You
can
obtain
one
at
http
:
/
/
mozilla
.
org
/
MPL
/
2
.
0
/
.
*
/
/
*
=
=
=
=
=
xulscrollbars
.
css
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
Styles
used
by
XUL
scrollbar
-
related
elements
.
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
*
/
namespace
url
(
"
http
:
/
/
www
.
mozilla
.
org
/
keymaster
/
gatekeeper
/
there
.
is
.
only
.
xul
"
)
;
namespace
html
url
(
"
http
:
/
/
www
.
w3
.
org
/
1999
/
xhtml
"
)
;
/
*
namespace
for
HTML
elements
*
/
/
*
:
:
:
:
:
scrollbar
:
:
:
:
:
*
/
scrollbar
{
-
moz
-
appearance
:
scrollbar
-
horizontal
;
cursor
:
default
;
}
media
all
and
(
-
moz
-
overlay
-
scrollbars
)
{
scrollbar
[
root
=
"
true
"
]
{
position
:
relative
;
z
-
index
:
2147483647
;
/
*
largest
positive
value
of
a
signed
32
-
bit
integer
*
/
}
scrollbar
:
not
(
[
active
=
"
true
"
]
)
scrollbar
[
disabled
=
"
true
"
]
{
visibility
:
hidden
;
}
}
scrollbar
[
orient
=
"
vertical
"
]
{
-
moz
-
appearance
:
scrollbar
-
vertical
;
}
/
*
:
:
:
:
:
slider
-
a
thumb
is
inside
:
:
:
:
:
*
/
slider
{
-
moz
-
appearance
:
scrollbartrack
-
horizontal
;
}
slider
[
orient
=
"
vertical
"
]
{
-
moz
-
appearance
:
scrollbartrack
-
vertical
;
}
/
*
:
:
:
:
:
thumb
(
horizontal
)
:
:
:
:
:
*
/
thumb
[
orient
=
"
vertical
"
]
{
-
moz
-
appearance
:
scrollbarthumb
-
vertical
;
min
-
height
:
8px
;
}
thumb
[
orient
=
"
horizontal
"
]
{
-
moz
-
appearance
:
scrollbarthumb
-
horizontal
;
min
-
width
:
8px
;
}
/
*
:
:
:
:
:
square
at
the
corner
of
two
scrollbars
:
:
:
:
:
*
/
scrollcorner
{
-
moz
-
appearance
:
scrollcorner
;
width
:
16px
;
cursor
:
default
;
background
-
color
:
-
moz
-
Dialog
;
}
/
*
.
.
.
.
.
increment
.
.
.
.
*
/
scrollbarbutton
[
type
=
"
increment
"
]
{
-
moz
-
appearance
:
scrollbarbutton
-
right
;
}
scrollbar
[
orient
=
"
vertical
"
]
>
scrollbarbutton
[
type
=
"
increment
"
]
{
-
moz
-
appearance
:
scrollbarbutton
-
down
;
}
/
*
.
.
.
.
.
decrement
.
.
.
.
*
/
scrollbarbutton
[
type
=
"
decrement
"
]
{
-
moz
-
appearance
:
scrollbarbutton
-
left
;
}
scrollbar
[
orient
=
"
vertical
"
]
>
scrollbarbutton
[
type
=
"
decrement
"
]
{
-
moz
-
appearance
:
scrollbarbutton
-
up
;
}

